--- a/src/index.scss
+++ b/src/index.scss
@@ -248,3 +248,76 @@ body {
     }
   }
 }
+
+//form 레이아웃
+.form{
+  margin: 0 auto;
+  max-width: 680px;
+  padding: 20px;
+
+  input{
+    height: 20px;
+    padding: 10px;
+    border-radius: 0.3rem;
+    border: 1px solid lightgray;
+    width: 96%;
+    max-width: 680px;
+  }
+
+  &_block{
+    margin-top: 20px;
+    width: 100%;
+  }
+
+  &_block--lg{
+    margin-top: 28px;
+    width: 100%;
+  }
+
+  label{
+    display: block;
+    font-weight: 500;
+    margin-bottom: 10px;
+    margin-top: 20px;
+  }
+
+  &_btn--submit{
+    @extend .button;
+    width: 100%;
+    height: 48px;
+    font-weight: 600;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    margin: 0 auto;
+    color: white;
+    background-color: $promaryColor;
+
+    &:hover,
+    &:focus{
+      background-color: $activeBorder;
+    }
+  }
+
+  &_title{
+    text-align: center;
+    font-size: 24px;
+    font-weight: 700;
+    padding-bottom: 20px;
+  }
+
+  &_link{
+    margin-left: 10px;
+    text-decoration: none;
+    color: $greyText;
+
+    &:hover,
+    &:focus{
+      color: $gray;
+    }
+  }
+
+  &_error{
+    color: red;
+  }
+}
