--- a/src/index.scss
+++ b/src/index.scss
@@ -320,4 +320,27 @@ body {
   &_error{
     color: red;
   }
+
+  &_btn--google{
+    @extend .form_btn--submit;
+    background-color: $white;
+    color: $activeBorder;
+
+    &:hover,
+    &:focus{
+      background-color: $promaryColor;
+      color: $white;
+    }
+  }
+  &_btn--github{
+    @extend .form_btn--submit;
+    background-color: black;
+    color: $white;
+
+    &:hover,
+    &:focus{
+      background-color: $activeBackground;
+      color: $white;
+    }
+  }
 }
