--- a/src/index.scss
+++ b/src/index.scss
@@ -160,6 +160,32 @@ body {
 }
 
 .post-form{
+
+  &_image-area{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+
+  
+
+  &_attachment {
+    display: flex;
+    align-items: end;
+    gap: 16px;
+  }
+
+  &_clear-btn{
+    @extend .button;
+    padding: 0.2rem 0.8rem;
+    background-color: $danger;
+
+    &:hover,
+    &:focus{
+      background-color: $dangerDark;
+    }
+  }
+
   &_input{
     font-family: $font;
     padding: 8px;
@@ -221,6 +247,7 @@ body {
     display: flex;
     padding: 0.75rem 1rem;
     justify-content: space-between;
+    align-items: center;
     border-bottom: 1px solid $border;
 
     .post-form_file{
@@ -246,6 +273,11 @@ body {
 
 // Post 레이아웃
 .post{
+
+  &_image-div{
+    padding: 16px;
+  }
+  
   &_header{
     button{
       border: none;
